--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,24 +3,24 @@ theme:
   name: material
 nav:
   - Accueil: index.md
-  - 🦖 Créatures:
+  - Creatures:
       - T-Rex: creatures/t-rex.md
       - Argentavis: creatures/argentavis.md
       - Giganotosaure: creatures/giganotosaure.md
       - Wyverne: creatures/wyverne.md
-      - Boss : Dragon: creatures/boss-dragon.md
+      - Boss Dragon: creatures/boss-dragon.md
       - Volants: creatures/volants.md
       - Marins: creatures/marins.md
       - Fantastiques: creatures/fantastiques.md
-  - ⚔️ Équipements:
-      - Fusil à pompe: equipements/fusil-a-pompe.md
+  - Equipements:
+      - Fusil a pompe: equipements/fusil-a-pompe.md
       - Arc composite: equipements/arc-composite.md
       - Fusil Tek: equipements/fusil-tek.md
       - Lance-flammes: equipements/lance-flammes.md
-      - Armure en chitine: equipements/armure-chitine.md
+      - Armure chitine: equipements/armure-chitine.md
       - Armure Tek: equipements/armure-tek.md
-      - Selle de T-Rex: equipements/selle-trex.md
-      - Plateforme de Bronto: equipements/plateforme-bronto.md
-      - Pioche en métal: equipements/pioche-metal.md
-  - 🛠️ Commandes Admin:
-      - Commandes d’objets: admin/commandes-objets.md
+      - Selle T-Rex: equipements/selle-trex.md
+      - Plateforme Bronto: equipements/plateforme-bronto.md
+      - Pioche metal: equipements/pioche-metal.md
+  - Commandes Admin:
+      - Commandes objets: admin/commandes-objets.md
